Fixed header readability, removed color

--- a/css/styles.css
+++ b/css/styles.css
@@ -491,6 +491,11 @@ progress {
   font-weight: 300;
 }
 
+.lead1 {
+  font-size: 2.25rem;
+  font-weight: 300;
+}
+
 .display-1 {
   font-size: calc(1.625rem + 4.5vw);
   font-weight: 300;
